@@ -29,6 +29,10 @@
 
 2007-10-17  Paolo Borelli  <pborelli@katamail.com>
 
+	* libnautilus-private/nautilus-recent.c: do not use gnome-vfs.
+
+2007-10-17  Paolo Borelli  <pborelli@katamail.com>
+
 	* libnautilus-private/nautilus-emblem-utils.c: do not use gnome-vfs.
 
 2007-10-17  Paolo Borelli  <pborelli@katamail.com>
